--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.3.20",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^14.0.0",
